--- a/style.css
+++ b/style.css
@@ -51,3 +51,9 @@ flex-direction: column;
 justify-content: center;
 align-items: center;
 }
+
+#motivation {
+display: flex;
+flex-direction : column;
+align-items: center;
+}
