--- a/style.css
+++ b/style.css
@@ -2,62 +2,102 @@
   color: white;
 }
 
-.box {
-    /* Dimensions du contenu */
-    width: 300px;
-    height: 200px;
-    
-    /* Espace interne */
-    padding: 20px;
-    
-    /* Bordure */
-    border: 2px solid rgb(41, 195, 43);
-    
-    /* Espace externe */
-    margin: 30px;
-  }
-  .box2 {
-    /* Dimensions du contenu */
-    width: 300px;
-    height: 230px;
-    
-    /* Espace interne */
-    padding: 20px;
-    
-    /* Bordure */
-    border: 2px solid rgb(41, 85, 195);
-    
-    /* Espace externe */
-    margin: 30px;
-  }
-  .box3 {
-    /* Dimensions du contenu */
-  width: 300px;
-  height:295px;   
-    /* Espace interne */
-    padding: 20px;
-    
-    /* Bordure */
-    border: 2px solid rgb(195, 41, 175);
-    
-    /* Espace externe */
-    margin: 30px;
-  }
-.container {
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
+body {
+  background-image: url('thumb-1920-83970.jpg');
 }
+
 .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+  
+#motivation {
+  display: flex;
+  flex-direction : column;
+  align-items: center;
+}
+
+#parcours {
 display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
 }
 
-#motivation {
-display: flex;
-flex-direction : column;
-align-items: center;
+.cv-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.box {
+  /* Dimensions du contenu */
+  width: 300px;
+  height: 200px;
+    
+  /* Espace interne */
+  padding: 20px;
+    
+  /* Bordure */
+  border: 2px solid rgb(41, 195, 43);
+    
+  /* Espace externe */
+  margin: 30px;
+}
+
+.box2 {
+  /* Dimensions du contenu */
+  width: 300px;
+  height: 230px;
+    
+  /* Espace interne */
+  padding: 20px;
+    
+  /* Bordure */
+  border: 2px solid rgb(41, 85, 195);
+    
+  /* Espace externe */
+  margin: 30px;
+}
+
+.box3 {
+  /* Dimensions du contenu */
+  width: 300px;
+  height:295px;   
+  /* Espace interne */
+  padding: 20px;
+    
+  /* Bordure */
+  border: 2px solid rgb(195, 41, 175);
+    
+  /* Espace externe */
+  margin: 30px;
+}
+
+.cv {
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.travail {
+  border: red solid 2px;
+  padding: 20px;
+  text-align: center;
+}
+.boulot {
+ border: orange solid 2px;
+ padding: 20px;
+ text-align: center;
+}
+
+.job {
+ border: yellow solid 2px;
+ padding: 20px;
+ text-align: center;
 }
